# luizalabs-wishlist

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  main.py  populate_products.sql  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/core/: auth.py
app/db/: create_tables.py  database.py
app/helpers/: api.py
app/models/: models.py
app/schemas/: auth.py  customer.py  product.py  schemas.py  wishlist.py
k8s/: database.yaml  deployment.yaml  secrets.yaml  service.yaml
tests/: conftest.py  test_auth.py  test_wishlist.py
