[tool.poetry]
name = "luizalabs-wishlist"
version = "0.1.0"
description = "Uma API de lista de desejos construída com FastAPI e PostgreSQL."
authors = ["Bruno Queiroz <brunowsq@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
